syntax = "proto3";

package trip;

option go_package = "shared/proto/trip";

service TripService {
    rpc PreviewTrip(PreviewTripRequest) returns (PreviewTripResponse);
}

message PreviewTripRequest {
    string userID = 1;
    Coordinate pickup = 2;
    Coordinate destination = 3;
}

message PreviewTripResponse {
    string tripID = 1;
    Route route = 2;
    repeated RideFare rideFares = 3;
}

message Coordinate {
    double latitude = 1;
    double longitude = 2;
}

message Route {
    double distance = 1;
    double duration = 2;
    repeated Geometry geometry = 3;
}

message Geometry {
    repeated Coordinate coordinates = 1;
}

message RideFare {
    string id = 1;
    string userID = 2;
    string packageSlug = 3;
    double totalPriceInCents = 4;
}